--- a/templates/blog.html
+++ b/templates/blog.html
@@ -17,9 +17,10 @@
 		<![endif]-->
 	</head>
 	<body>
+		
 		<header class="bg-primary text-white">
 			<div class="container text-center">
-			<h1><?php echo $main_heading; ?></h1>
+			<h1>Blog</h1>
 			</div>
 			</header>
 			 
@@ -31,6 +32,7 @@
 			{
 				foreach($blog_entries  as $singleEntry)
 				{
+					
 					echo '<div class="row">';
 					echo '<div class="col-lg-12" >';
 					echo '<h3>'.$singleEntry['title'].'</h3>';	
