--- a/templates/login.phtml
+++ b/templates/login.phtml
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="css/login.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
 <h2>Login Form</h2>
 
-<form action="/action_page.php">
-  
+<form  method="post">
+
 
   <div class="container">
-    <label for="uname"><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="uname" required>
+   
+      <?php 
+        if($message) echo 
+        '<p class="error">'.$message.'</p>';
+      ?>
+    
+    <label for="user"><b>Username</b></label>
+    <input type="text" placeholder="Enter Username" name="user" required>
 
-    <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+    <label for="pass"><b>Password</b></label>
+    <input type="password" placeholder="Enter Password" name="pass" required>
         
     <button type="submit">Login</button>
     <label>
